demo tmdb app | using retrofit to get ata from tmdb api.| using  Glide library for load images

--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -21,13 +21,14 @@
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
+            android:id="@+id/mainlv"
             android:layout_height="wrap_content"
             android:padding="10dp">
 
             <ImageView
                 android:id="@+id/imageMovie"
                 android:layout_width="80dp"
-                android:layout_height="160dp"
+                android:layout_height="130dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
@@ -41,13 +42,13 @@
                 android:id="@+id/titleMovie"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/nunito_semibold"
                 android:maxLines="2"
                 android:text="sdkfskdfsd"
-                android:textSize="18dp"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/imageMovie"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -67,14 +68,15 @@
             <TextView
                 android:id="@+id/descMovie"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="30sp"
+                android:layout_marginBottom="20sp"
                 android:fontFamily="@font/nunito_semibold"
                 android:text="sdgdsgdsshsgg"
-                android:textSize="14dp"
+                android:textSize="12dp"
+                android:maxLines="3"
                 app:layout_constraintBottom_toTopOf="@+id/date"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/imageMovie"
@@ -84,9 +86,9 @@
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/greenbackground"
                 android:fontFamily="@font/nunito_semibold"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -105,7 +107,6 @@
                 android:fontFamily="@font/nunito_semibold"
                 android:gravity="center_horizontal"
                 android:text="sfsdsd"
-                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/language"
                 app:layout_constraintStart_toEndOf="@+id/rating" />
@@ -116,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/redpadtel"
+                android:background="@drawable/redbackground"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/white"
